rework the druid docs and fix many mistakes

--- a/examples/config/overlord/runtime.properties
+++ b/examples/config/overlord/runtime.properties
@@ -15,12 +15,17 @@
 # limitations under the License.
 #
 
+# Use default host and port settings - not recommended for production
 #druid.host=localhost
 #druid.port=8090
 druid.service=overlord
 
 # Run the overlord in local mode with a single peon to execute tasks
+# This is not recommended for production.
 druid.indexer.queue.startDelay=PT0M
+# This setting is too small for real production workloads
 druid.indexer.runner.javaOpts="-server -Xmx256m"
+# These settings are also too small for real production workloads
+# Please see our recommended production settings in the docs
 druid.indexer.fork.property.druid.processing.numThreads=1
 druid.indexer.fork.property.druid.computation.buffer.size=100000000
