--- a/examples/config/broker/runtime.properties
+++ b/examples/config/broker/runtime.properties
@@ -15,6 +15,7 @@
 # limitations under the License.
 #
 
+# Use default host and port settings - not recommended for production
 #druid.host=localhost
 #druid.port=8082
 druid.service=broker
@@ -23,6 +24,6 @@ druid.service=broker
 druid.broker.cache.useCache=true
 druid.broker.cache.populateCache=true
 
-# Bump these up only for faster nested groupBy
+# For prod: set numThreads = # cores - 1, and sizeBytes to 512mb
 druid.processing.buffer.sizeBytes=100000000
 druid.processing.numThreads=1
