--- a/examples/config/coordinator/runtime.properties
+++ b/examples/config/coordinator/runtime.properties
@@ -15,10 +15,12 @@
 # limitations under the License.
 #
 
+# Use default host and port settings - not recommended for production
 #druid.host=localhost
 #druid.port=8081
 druid.service=coordinator
 
 # The coordinator begins assignment operations after the start delay.
 # We override the default here to start things up faster for examples.
+# In production you should use PT5M or PT10M
 druid.coordinator.startDelay=PT70s
