address code review

--- a/examples/config/overlord/runtime.properties
+++ b/examples/config/overlord/runtime.properties
@@ -15,9 +15,9 @@
 # limitations under the License.
 #
 
-# Use default host and port settings - not recommended for production
+# Use default host and port settings - not recommended for production, if you have multiple nodes, you can use the same port
 #druid.host=localhost
-#druid.port=8090
+#druid.port=8080
 druid.service=overlord
 
 # Run the overlord in local mode with a single peon to execute tasks
