--- a/examples/config/coordinator/runtime.properties
+++ b/examples/config/coordinator/runtime.properties
@@ -15,9 +15,9 @@
 # limitations under the License.
 #
 
-# Use default host and port settings - not recommended for production
+# Use default host and port settings - not recommended for production, if you have multiple nodes, you can use the same port
 #druid.host=localhost
-#druid.port=8081
+#druid.port=8080
 druid.service=coordinator
 
 # The coordinator begins assignment operations after the start delay.
