--- a/examples/config/realtime/runtime.properties
+++ b/examples/config/realtime/runtime.properties
@@ -15,9 +15,9 @@
 # limitations under the License.
 #
 
-# Use default host and port settings - not recommended for production
+# Use default host and port settings - not recommended for production, if you have multiple nodes, you can use the same port
 #druid.host=localhost
-#druid.port=8084
+#druid.port=8080
 druid.service=realtime
 
 # We can only 1 scan segment in parallel with these configs.
